--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "recharts": "^2.12.1",
     "remark-breaks": "^4.0.0"
   },
   "devDependencies": {
